--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --testTimeout=35000 --detectOpenHandles"
+    "test": "jest --testTimeout --detectOpenHandles"
   },
   "jest": {
     "testEnvironment": "node",
